# apps/wordle-time-backend/src/main/kotlin/com/wordletime/di/ServerModule.kt
@@ -6,7 +6,8 @@ import com.wordletime.config.Config
 import com.wordletime.config.ServerConfig
 import com.wordletime.config.WordList
 import com.wordletime.config.WordProviderConfig
-import com.wordletime.requirements.RequirementsProvider
+import com.wordletime.documentationProvider.GlossaryProvider
+import com.wordletime.documentationProvider.RequirementsProvider
 import com.wordletime.wordProvider.ListWordProvider
 import com.wordletime.wordProvider.StaticWordProvider
 import com.wordletime.wordProvider.WordProvider
@@ -21,7 +22,7 @@ import org.kodein.di.singleton
 internal fun Application.setupDI(config: Config, overrideModule: DI.Module? = null) {
   di {
     import(serverModule(config))
-    if(overrideModule != null) import(overrideModule, allowOverride = true)
+    if (overrideModule != null) import(overrideModule, allowOverride = true)
   }
 }
 
@@ -52,4 +53,5 @@ internal fun serverModule(config: Config) = DI.Module("serverConfig") {
   }
   bind<WordState> { singleton { WordState(instance<WordProvider>(), instance<ServerConfig>().demo) } }
   bind<RequirementsProvider> { singleton { RequirementsProvider() } }
+  bind<GlossaryProvider> { singleton { GlossaryProvider() } }
 }
